[gd_scene load_steps=6 format=3 uid="uid://dfap0c24jycc2"]

[ext_resource type="Texture2D" uid="uid://bcf1hw1e27r1w" path="res://Assets/Houses/house1-default.png" id="1_byt0k"]
[ext_resource type="Script" path="res://delivery/house.gd" id="1_ei5u1"]
[ext_resource type="StyleBox" uid="uid://bfvh20m347g67" path="res://transparent.tres" id="2_vknoh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sl2hj"]
size = Vector2(64, 160)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfivm"]
bg_color = Color(0.917647, 0, 0.329412, 1)

[node name="House" type="Node2D"]
position = Vector2(33, 112)
script = ExtResource("1_ei5u1")

[node name="HouseSprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_byt0k")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_sl2hj")

[node name="patience" type="ProgressBar" parent="."]
offset_left = -31.0
offset_right = -27.0
offset_bottom = 27.0
scale = Vector2(9.2468, 0.274508)
theme_override_styles/fill = SubResource("StyleBoxFlat_rfivm")
show_percentage = false

[node name="Button" type="Button" parent="."]
offset_left = -32.0
offset_top = -88.0
offset_right = -24.0
offset_bottom = -80.0
scale = Vector2(8.12388, 16.9637)
theme_override_styles/normal = ExtResource("2_vknoh")
theme_override_styles/hover = ExtResource("2_vknoh")
theme_override_styles/pressed = ExtResource("2_vknoh")
theme_override_styles/disabled = ExtResource("2_vknoh")
theme_override_styles/focus = ExtResource("2_vknoh")

[node name="rngCD" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="rngCD" to="." method="_on_timer_timeout"]
